MFH: Fixed bug #29209 (imap_fetchbody() doesn't check message index).